Fix css class accumulation closes #87
Squashed commit of the following:

commit 83a42cd830f01ae6b68788b33bede0330d56daef
Author: Benoît Latinier <benoit@latinier.fr>
Date:   Tue Sep 5 21:44:31 2017 +0200

    fix css class accumulation

--- a/pigeon/static/css/weights.css
+++ b/pigeon/static/css/weights.css
@@ -160,6 +160,16 @@ ul.side-about > li > a:hover {
   line-height: 35px;
   text-align: center;
 }
+.pigeon-title {
+  color: #FF5A5F;
+  font-family: 'Lobster', serif;
+  text-align: center;
+  width: 100%;
+}
+.pigeon-title-about {
+  color: #FF5A5F;
+  font-family: 'Lobster', serif;
+}
 .padding-left-0 { padding-left: 0; }
 .padding-right-0 { padding-right: 0; }
 #navbar.in { overflow: visible; }
